@startuml
skinparam shadowing false
skinparam line type polyline
'left to right direction
package UI {
    class AddAgendaEntryUI {
    }
}

package CONTROLLER {
    class AddAgendaEntryController {
        - repositories: Repositories
        - entryRepository: EntryRepository
        + AddAgendaEntryController()
        + getToDoEntry(gsm: UserSession): List<ToDoEntryDto>
        + addAgendaEntry (agendaEntryDto: AgendaEntryDto)
    }
}

package DOMAIN {
    package REPOSITORY {
        class Repositories {
            - instance: Repositories
            - entryRepository: EntryRepository
            - Repositories()
            + getInstance(): Repositories
            + getEntryRepository(): EntryRepository
        }

        class EntryRepository {
            - toDoEntryList: List<ToDoEntry>
            - agendaEntryList: List<AgendaEntry>
            + EntryRepository()
            + getToDoEntryListByGSM(gsm: UserSession): List<ToDoEntryDto>
            + addAgendaEntry(agendaEntry: AgendaEntry): void
        }
    }



    package MODEL {
        class AgendaEntry {
            - title: String
            - description: String
            - duration: int
            - urgencyStatus: UrgencyStatus
            - greenSpace: GreenSpace
            - startingDate: LocalDate
            - progressStatus: ProgressStatus
            + AgendaEntry(title: String, description: String, duration: int, urgencyStatus: UrgencyStatus, greenSpace: GreenSpace, startingDate: LocalDate, progressStatus: ProgressStatus)
            + setProgressStatus(status: ProgressStatus): void
            + setStartingDate(date: LocalDate): void
            + getUrgencyStatus(): UrgencyStatus
        }

         class ToDoEntry{
            - title: String
            - description: String
            - duration: int
            - greenSpace: GreenSpace
         }
    }
}
 package DTO {
        class ToDoEntryDto {
           - title: String
           - description: String
           - duration: int
           - greenSpace: GreenSpaceDto
           - urgencyStatus: UrgencyStatus
           + ToDoEntryDto(title: String, description: String, duration: int, urgencyStatus: UrgencyStatus, greenSpace: GreenSpaceDto)
           + getTitle(): String
           + getDescription(): String
           + getDuration(): int
           + getUrgencyStatus(): UrgencyStatus
           + getGreenSpace(): GreenSpaceDto
           + setDescription(desription: String): void
           + setDuration(duration: int): void
           + setGreenSpace(greenSpace: GreenSpaceDto): void
           + setTitle(title: String): void
           + setUrgencyStatus(urgencyStatus: UrgencyStatus): void
         }

         class ToDoEntryMapper {
            + toDto(toDoEntry: ToDoEntry): ToDoEntryDto
            + toDomain(toDoEntryDto: ToDoEntryDto): ToDoEntry
            + toDtoList(toDoEntries: List<ToDoEntry>): List<ToDoEntryDto>

         }
 }

  package EXTERNAL{
     class ApplicationSession{
             +getInstance : ApplicationSession
             +getSortAlgorithmClassName : String
             +getCurrentSession : UserSession
     }
  }

AddAgendaEntryUI ..> AddAgendaEntryController
AddAgendaEntryController ..> Repositories
Repositories --> Repositories: instance
AddAgendaEntryController ..> EntryRepository
Repositories --> EntryRepository
EntryRepository --> "*" AgendaEntry
AgendaEntry -> ToDoEntry
ToDoEntryMapper ..> ToDoEntryDto
ToDoEntryMapper ..> ToDoEntry
EntryRepository --> ToDoEntry
AddAgendaEntryController ..> ApplicationSession : getCurrentSession




@enduml
